<resources>
    <string name="app_name">DoodleExample</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="colorwheel">ColorWheel</string>
    <string name="open">Open</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
